fix styles, fix vehicles visibility

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-.container {
+.gtfs-stations-builder-container {
   width: 100vw;
   height: 100vh;
   .loader {
